fix: z-index

--- a/assets/sass/euro-2024.scss
+++ b/assets/sass/euro-2024.scss
@@ -102,6 +102,7 @@
         background-color: transparent;
         box-shadow: unset;
         border-bottom: unset;
+        z-index: 1001;
         .nav__euro2024 {
             background: #0d1e62;
             border-bottom: 1px solid #faaa50;
